# mcpsandbox

./: README.md  pyproject.toml
launcher/: launch.py  pyproject.toml
sandbox/mcp/servers/: __init__.py  spawner.py  weather.py
