[project]
name = "mcpsandbox"
version = "0.1.0"
description = "Sandbox package for creating and testing MCP servers"
authors = [
    {name = "Anshul Kanakia",email = "anshul.p.kanakia@gmail.com"}
]
requires-python = ">=3.10,<3.14"
readme = "README.md"

[tool.poetry]
# package-mode = false
packages = [
    { include = "sandbox", from = "."},
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
mcp = {version = ">=1.8.0,<2.0.0", extras = ["cli"]}
pandas = {version = ">=2.2.3,<3.0.0"}
timezonefinder = "^6.5.9"
pytz = "^2025.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
notebook = "^7.4.2"
black = "^25.1.0"
ruff = "^0.11.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
