[project]
name = "mcp_server_launcher"
version = "0.1.0"
description = "An MCP server launcher."
authors = [
    {name = "Anshul Kanakia",email = "anshul.p.kanakia@gmail.com"}
]
requires-python = ">=3.10,<3.14"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
click = "^8.2.0"
mcpsandbox = {path="..", develop = true}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
